| Summary: | ASTERISK-30417: Copy/Paste error in UnpauseQueueMember | ||
| Reporter: | Sean Bright (seanbright) | Labels: | patch |
| Date Opened: | 2023-02-06 09:13:57.000-0600 | Date Closed: | 2023-02-17 11:51:47.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_queue |
| Versions: | GIT | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) 0001-app_queue.c-Fix-typo-in-UnpauseQueueMember-warning.patch | |
| Description: | If the {{interface}} argument is not passed to {{UnpauseQueueMember}}, the following warning is emitted:
{noformat} Missing interface argument to PauseQueueMember ([queuename],interface[,options[,reason]]) {noformat} Note that the warning references {{PauseQueueMember}} and not {{UnpauseQueueMember}}. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2023-02-06 09:14:00.550-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Sean Bright (seanbright) 2023-02-06 09:17:38.453-0600 Potential fix attached as [^0001-app_queue.c-Fix-typo-in-UnpauseQueueMember-warning.patch]. By: Sean Bright (seanbright) 2023-02-06 09:46:00.299-0600 This [stalled during code review|https://gerrit.asterisk.org/c/asterisk/+/19889] so if someone wants to take it over the finish line, please do! By: Friendly Automation (friendly-automation) 2023-02-17 11:51:49.242-0600 Change 19879 merged by Friendly Automation: app_queue: Minor docs and logging fixes for UnpauseQueueMember. [https://gerrit.asterisk.org/c/asterisk/+/19879|https://gerrit.asterisk.org/c/asterisk/+/19879] By: Friendly Automation (friendly-automation) 2023-02-20 06:19:19.089-0600 Change 19889 merged by George Joseph: app_queue: Minor docs and logging fixes for UnpauseQueueMember. [https://gerrit.asterisk.org/c/asterisk/+/19889|https://gerrit.asterisk.org/c/asterisk/+/19889] By: Friendly Automation (friendly-automation) 2023-02-20 06:19:34.958-0600 Change 19878 merged by George Joseph: app_queue: Minor docs and logging fixes for UnpauseQueueMember. [https://gerrit.asterisk.org/c/asterisk/+/19878|https://gerrit.asterisk.org/c/asterisk/+/19878] | ||